upping coverage and code smell fixes